fix: updated clanLayout to have overflow and max-width. clanLayout content should never exceed 75%

--- a/frontend-next-migration/src/preparedPages/ClanPages/ui/ClanLayout/ClanLayout.module.scss
+++ b/frontend-next-migration/src/preparedPages/ClanPages/ui/ClanLayout/ClanLayout.module.scss
@@ -30,6 +30,9 @@
     flex: 1;
     padding: 1rem;
     margin: 0.5rem;
+    max-width: 75%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 /* Desktop */
